--- a/nft/package.json
+++ b/nft/package.json
@@ -15,6 +15,7 @@
     "solidity-coverage": "^0.8.2"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.8.0",
     "base64-sol": "^1.1.0",
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
