--- a/nft/package.json
+++ b/nft/package.json
@@ -4,6 +4,7 @@
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "@nomiclabs/hardhat-etherscan": "^3.1.3",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@pinata/sdk": "^2.1.0",
     "chai": "^4.3.7",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.7.2",
